Fix layout bug in social icons

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -362,3 +362,7 @@
   margin-right: -15px;
   margin-left: -15px;
 }
+
+.social-icons {
+  position: inherit;
+}
